# cpp23-logger

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md
benchmarks/: CMakeLists.txt  bench_logger.cpp
examples/: CMakeLists.txt  basic_usage.cpp  code_generation.cpp  fluent_codegen.cpp  named_templates.cpp
include/logger/: code_generator.cppm  logger.cppm
tests/: CMakeLists.txt  test_functional_templates.cpp  test_logger.cpp  test_nested_templates.cpp  test_std_module.cpp
